--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
-"name": "sti-backend",
-"description": "Javascript Backend",
-"respitory": "https://github.com/Diyarfethi9an/STI-backend",
-"logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/main/public/node.svg",
-"keywords": ["node", "express", "heroku"],
-"image": "heroku/nodejs"
-
+    "name": "sti-backend",
+    "description": "Javascript Backend",
+    "repository": "https://github.com/YaffetK/sti-backend.git:",
+    "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/main/public/node.svg",
+    "keywords": ["node", "express", "heroku"],
+    "image": "heroku/nodejs"
 }
